          actions. This has to fix upgrading of packages containing
          'Pre-Depends' dependencies finally.
      - Resolver:
        - Use 'cupt::resolver::no-remove' option instead of 'no-remove' internal
          param.
        - Use 'cupt::resolver::type' option instead of 'resolver-type' internal
          param.
        - Check 'cupt::resolver::type' option for validity.
    - Cache:
      - BinaryVersion:
        - [API break] Advanced return value for 'uris' method.
        - 'uris' method: filter duplicates.
    - Config:
      - New configuration option 'cupt::resolver::no-remove'.
      - New configuration option 'cupt::resolver::type'.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Fri, 01 May 2009 13:12:00 +0300

cupt (0.1.1.1) experimental; urgency=low

  * debian/control:
    - Put libwww-curl-perl to Build-Depends-Indep so t/file_method.t can load
      it.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Fri, 01 May 2009 01:49:41 +0300

cupt (0.1.1) experimental; urgency=low

  * doc/cupt.1.pod:
    - Added 'Author' section.
  * cupt:
    - Action preview prompt:
      - Generate additional warning when deleting essential packages.
      - Require typing the confirmation phrase for really dangerous actions.
      - Changed 'installed' -> 'INSTALLED' for untrusted packages warning.
    - 'satisfy' subcommand:
      - Now accepts sequences of relation expressions divided by commas within
        one argument.
    - 'config-dump' subcommand:
      - Added a mode to print a value of only one configuration option.
    - 'show' subcommand:
      - Changed 'PreDepends' -> 'Pre-Depends' in output.
    - Implemented option '--installed-only' for some query actions.
    - Implemented option '--download-only' for management actions.
  * Cupt:
    - Core:
      - 'human_readable_size_string': don't print fractional part for small
        float values.
    - Download:
      - Method, Methods/*: